# hackathon

.claude/: settings.local.json
backend/: README.md  requirements.txt
backend/app/: main.py
backend/app/api/routes/: items.py
backend/app/core/: config.py  cosmos.py
backend/app/models/: item.py
backend/app/schemas/: item.py
backend/timetable-api/: .gitignore  README.md  pyproject.toml
backend/timetable-api/.github/: copilot-instructions.md
backend/timetable-api/app/: __init__.py  config.py  db.py  foundry.py  main.py
backend/timetable-api/app/routes/: students.py  timetable.py
backend/timetable-api/tests/: __init__.py
frontend/: package-lock.json  package.json
frontend/app/: color-schemes.css  globals.css  layout.tsx  page.tsx
frontend/app/academies/: page.tsx
frontend/app/academies/[id]/: page.tsx
frontend/app/academies/new/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/session/[id]/: page.tsx
frontend/app/students/: page.tsx
frontend/app/students/[id]/: page.tsx
frontend/app/timetable/: page.tsx
frontend/components/: absence-card.tsx  absence-detail-modal.tsx  location-selector.tsx  session-card.tsx  sidebar.tsx  student-card.tsx
